--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     xmlns:custom="http://schemas.android.com/apk/res/io.github.kozemirov.readmoretextview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".sample.MainActivity"
     >
 
     <io.github.kozemirov.readmoretextview.ReadMoreTextView
