--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:custom="http://schemas.android.com/apk/res/io.github.kozemirov.readmoretextview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".sample.MainActivity"
@@ -18,7 +17,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        custom:text="@string/lorem_ipsum"
+        app:text="@string/lorem_ipsum"
+        app:color="@color/black"
+        app:textSize="12"
+        app:justificationMode="1"
+        app:readMoreText="Read More"
+        app:showLessText="Show Less"
+        app:limit="5"
+        app:hidden="true"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
