--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         app:showLessText="Show Less"
         app:limit="5"
         app:hidden="true"
+        app:newLineIndent="2"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
